--- a/app/src/main/res/layout/inscription.xml
+++ b/app/src/main/res/layout/inscription.xml
@@ -29,9 +29,9 @@
     <EditText
         android:id="@+id/prenom"
         android:layout_width="285dp"
-        android:layout_height="80dp"
+        android:layout_height="50dp"
         android:layout_marginTop="90dp"
-        android:layout_marginStart="70dp"
+        android:layout_marginStart="50dp"
         android:textAlignment="center"
         android:background="#e8e8e8"
         android:hint="PRENOM"
@@ -40,10 +40,10 @@
     <EditText
         android:id="@+id/email"
         android:layout_width="285dp"
-        android:layout_height="80dp"
+        android:layout_height="50dp"
         android:textAlignment="center"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="70dp"
+        android:layout_marginStart="50dp"
         android:hint="EMAIL"
         android:textColor="#000"
         android:background="#e8e8e8"
@@ -52,9 +52,11 @@
     <EditText
         android:id="@+id/mot_de_passe"
         android:layout_width="285dp"
-        android:layout_height="80dp"
+        android:layout_height="50dp"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="70dp"
+        android:inputType="textPassword"
+        *
+        android:layout_marginStart="50dp"
         android:textAlignment="center"
         android:hint="MOT DE PASSE"
         android:textColor="#000"
@@ -64,9 +66,9 @@
     <Button
         android:id="@+id/confirmer"
         android:layout_width="285dp"
-        android:layout_height="80dp"
+        android:layout_height="50dp"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="70dp"
+        android:layout_marginStart="50dp"
         android:text="COMFIRMER"
         android:textColor="#fff"
         android:background="#000"
